--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,12 @@
             <artifactId>xstream</artifactId>
             <version>1.4.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.4</version>
+        </dependency>
     </dependencies>
     <!-- ==================== -->
     <!--       构建           -->
