--- a/pom.xml
+++ b/pom.xml
@@ -219,11 +219,14 @@
     <!-- ==================== -->
     <build>
         <filters>
-            <filter>src/main/filter/{env}.properties</filter>
+            <filter>src/main/filter/${env}.properties</filter>
         </filters>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <!--<includes>-->
+                    <!--<include>**/*.*</include>-->
+                <!--</includes>-->
                 <filtering>true</filtering>
             </resource>
         </resources>
