--- a/src/main/filter/prod.properties
+++ b/src/main/filter/prod.properties
@@ -1,5 +1,9 @@
 #====================
 #   日志参数
 #====================
-log.level=INFO
-
+log.level=DEBUG
+#====================
+#   日志参数
+#====================
+redis.server.hostname=127.0.0.1
+redis.server.port=6379
