--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,8 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
+            <!--<version>2.9.0</version>-->
+            <version>2.5.1</version>
         </dependency>
 
         <dependency>
