--- a/pom.xml
+++ b/pom.xml
@@ -245,11 +245,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
-                <configuration>
-                    <webResources>
-                        <webResource></webResource>
-                    </webResources>
-                </configuration>
+
             </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
@@ -260,8 +256,8 @@
                     <path>/ROOT</path>
                     <update>true</update>
                     <url>http://47.93.194.39:8080/manager/text</url>
-                    <username>admin</username>
-                    <password>1281827908</password>
+                    <username>root</username>
+                    <password>root</password>
                 </configuration>
             </plugin>
         </plugins>
