--- a/pom.xml
+++ b/pom.xml
@@ -219,8 +219,9 @@
     <!--       构建           -->
     <!-- ==================== -->
     <build>
+        <finalName>study-webapi</finalName>
         <filters>
-            <filter>src/main/filter/${env}.properties</filter>
+            <filter>src/main/filters/${env}.properties</filter>
         </filters>
         <resources>
             <resource>
