--- a/pom.xml
+++ b/pom.xml
@@ -76,14 +76,14 @@
             <version>${spring.version}</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-orm</artifactId>-->
-            <!--<version>${spring.version}</version>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-orm</artifactId>-->
+        <!--<version>${spring.version}</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-aspects</artifactId>-->
-            <!--<version>${spring.version}</version>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-aspects</artifactId>-->
+        <!--<version>${spring.version}</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -225,10 +225,10 @@
         </filters>
         <resources>
             <resource>
+                <directory>src/main/profiles/${env}.properties</directory>
+            </resource>
+            <resource>
                 <directory>src/main/resources</directory>
-                <!--<includes>-->
-                    <!--<include>**/*.*</include>-->
-                <!--</includes>-->
                 <filtering>true</filtering>
             </resource>
         </resources>
@@ -246,21 +246,46 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
-
             </plugin>
             <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
                 <configuration>
-                    <port>8080</port>
-                    <path>/ROOT</path>
-                    <update>true</update>
-                    <url>http://47.93.194.39:8080/manager/text</url>
-                    <username>root</username>
-                    <password>root</password>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>wagon-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <executions>
+                    <execution>
+                        <id>upload-sshexec</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>upload-single</goal>
+                            <goal>sshexec</goal>
+                        </goals>
+                        <configuration>
+                            <serverId>server_39</serverId>
+                            <fromFile>target/</fromFile>
+                            <url>scp://47.93.194.39/app/study-webapi/webapps</url>
+                            <commands>
+                                <command>
+                                    <![CDATA[
+                                    cd /app/study-webapi/webapps;
+                                    rm -rf ROOT;
+                                    tar -zxf  -C ./ROOT
+                                    ]]>
+                                </command>
+                            </commands>
+                            <displayCommandOutputs>true</displayCommandOutputs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
     <!-- ==================== -->
