--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- ==================== -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.company.project.webapi</groupId>
-    <artifactId>study-webapi</artifactId>
+    <artifactId>demo-webapi</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
     <!-- ==================== -->
