--- a/pom.xml
+++ b/pom.xml
@@ -255,36 +255,7 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>wagon-maven-plugin</artifactId>
-                <version>2.0.0</version>
-                <executions>
-                    <execution>
-                        <id>upload-sshexec</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>upload-single</goal>
-                            <goal>sshexec</goal>
-                        </goals>
-                        <configuration>
-                            <serverId>server_39</serverId>
-                            <fromFile>target/</fromFile>
-                            <url>scp://47.93.194.39/app/demo-webapi/webapps</url>
-                            <commands>
-                                <command>
-                                    <![CDATA[
-                                    cd /app/demo-webapi/webapps;
-                                    rm -rf ROOT;
-                                    tar -zxf  -C ./ROOT
-                                    ]]>
-                                </command>
-                            </commands>
-                            <displayCommandOutputs>true</displayCommandOutputs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
         </plugins>
     </build>
     <!-- ==================== -->
@@ -299,6 +270,40 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>wagon-maven-plugin</artifactId>
+                        <version>2.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>upload-sshexec</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>upload-single</goal>
+                                    <goal>sshexec</goal>
+                                </goals>
+                                <configuration>
+                                    <serverId>server_39</serverId>
+                                    <fromFile>target/</fromFile>
+                                    <url>scp://47.93.194.39/app/demo-webapi/webapps</url>
+                                    <commands>
+                                        <command>
+                                            <![CDATA[
+                                    cd /app/demo-webapi/webapps;
+                                    rm -rf ROOT;
+                                    tar -zxf  -C ./ROOT
+                                    ]]>
+                                        </command>
+                                    </commands>
+                                    <displayCommandOutputs>true</displayCommandOutputs>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>test</id>
