--- a/pom.xml
+++ b/pom.xml
@@ -272,11 +272,9 @@
                                     <url>scp://47.93.194.39/app/demo-webapi/webapps</url>
                                     <commands>
                                         <command>
-                                            <![CDATA[
-                                    cd /app/demo-webapi/webapps;
-                                    rm -rf ROOT;
-                                    tar -zxf  -C ./ROOT
-                                    ]]>
+                                            <![CDATA[ cd /app/demo-webapi/webapps;
+                                            rm -rf ROOT;
+                                            tar -zxf  -C ./ROOT ]]>
                                         </command>
                                     </commands>
                                     <displayCommandOutputs>true</displayCommandOutputs>
