--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <shiro.version>1.3.2</shiro.version>
         <jackson.version>2.8.9</jackson.version>
         <logback.version>1.1.3</logback.version>
+
+        <war>${build.finalName}.${packaging}</war>
     </properties>
     <!-- ==================== -->
     <!--       依赖           -->
@@ -214,13 +216,13 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-        <!--<extensions>-->
-            <!--<extension>-->
-                <!--<groupId>org.apache.maven.wagon</groupId>-->
-                <!--<artifactId>wagon-ssh</artifactId>-->
-                <!--<version>2.8</version>-->
-            <!--</extension>-->
-        <!--</extensions>-->
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>2.8</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -244,6 +246,38 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>wagon-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <executions>
+                    <execution>
+                        <id>upload-sshexec</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>upload-single</goal>
+                            <goal>sshexec</goal>
+                        </goals>
+                        <configuration>
+                            <serverId>server_39</serverId>
+                            <fromFile>target/${war}</fromFile>
+                            <url>scp://47.93.194.39/app/demo-webapi/webapps</url>
+                            <commands>
+                                <command>
+                                    <![CDATA[ cd /app/demo-webapi/webapps
+                                            rm -rf ROOT
+                                            unzip -oq ${war} -d ./ROOT
+                                            rm -rf ${war}
+                                            cd /app/demo-webapi/bin
+                                            ./start-webapi.sh
+                                            ]]>
+                                </command>
+                            </commands>
+                            <displayCommandOutputs>true</displayCommandOutputs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <!-- ==================== -->
@@ -258,38 +292,42 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>wagon-maven-plugin</artifactId>
-                        <version>2.0.0</version>
-                        <executions>
-                            <execution>
-                                <id>upload-sshexec</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>upload-single</goal>
-                                    <goal>sshexec</goal>
-                                </goals>
-                                <configuration>
-                                    <serverId>server_39</serverId>
-                                    <fromFile>target/</fromFile>
-                                    <url>scp://47.93.194.39/app/demo-webapi/webapps</url>
-                                    <commands>
-                                        <command>
-                                            <![CDATA[ cd /app/demo-webapi/webapps;
-                                            rm -rf ROOT;
-                                            tar -zxf  -C ./ROOT ]]>
-                                        </command>
-                                    </commands>
-                                    <displayCommandOutputs>true</displayCommandOutputs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.codehaus.mojo</groupId>-->
+                        <!--<artifactId>wagon-maven-plugin</artifactId>-->
+                        <!--<version>2.0.0</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<id>upload-sshexec</id>-->
+                                <!--<phase>package</phase>-->
+                                <!--<goals>-->
+                                    <!--<goal>upload-single</goal>-->
+                                    <!--<goal>sshexec</goal>-->
+                                <!--</goals>-->
+                                <!--<configuration>-->
+                                    <!--<serverId>server_39</serverId>-->
+                                    <!--<fromFile>target/${war}</fromFile>-->
+                                    <!--<url>scp://47.93.194.39/app/demo-webapi/webapps</url>-->
+                                    <!--<commands>-->
+                                        <!--<command>-->
+                                            <!--<![CDATA[ cd /app/demo-webapi/webapps-->
+                                            <!--rm -rf ROOT-->
+                                            <!--unzip -oq ${war} -d ./ROOT-->
+                                            <!--rm -rf ${war}-->
+                                            <!--cd /app/demo-webapi/bin-->
+                                            <!--sh start-webapi.sh-->
+                                            <!--]]>-->
+                                        <!--</command>-->
+                                    <!--</commands>-->
+                                    <!--<displayCommandOutputs>true</displayCommandOutputs>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
         </profile>
         <profile>
             <id>test</id>
