--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
         <shiro.version>1.3.2</shiro.version>
         <jackson.version>2.8.9</jackson.version>
         <logback.version>1.1.3</logback.version>
-
-        <war>${build.finalName}.${packaging}</war>
+        <war>${project.build.finalName}.war</war>
     </properties>
     <!-- ==================== -->
     <!--       依赖           -->
@@ -220,7 +219,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh</artifactId>
-                <version>2.10</version>
+                <version>3.0.0</version>
             </extension>
         </extensions>
         <plugins>
@@ -265,11 +264,13 @@
                             <commands>
                                 <command>
                                     <![CDATA[
-                                        cd /app/demo-webapi/webapps
-                                        rm -rf ROOT
-                                        unzip -oq ${war} -d ./ROOT
-                                        rm -rf ${war}
-                                        /app/demo-webapi/bin/start-webapi.sh
+                                        cd /app/demo-webapi/webapps;
+                                        rm -rf ROOT;
+                                        unzip -oq ${war} -d ./ROOT;
+                                        sleep 3;
+                                        rm -rf ${war};
+                                        cd ../bin;
+                                        sh start-webapi.sh
                                     ]]>
                                 </command>
                             </commands>
