--- a/pom.xml
+++ b/pom.xml
@@ -276,22 +276,22 @@
                                <configuration>
                                    <serverId>server_39</serverId>
                                    <fromFile>target/${war}</fromFile>
-                                   <url>scp://47.93.194.39/app/demo-webapi/webapps</url>
+                                   <url>scp://47.93.194.39/app/demo-webapi</url>
                                    <commands>
                                        <command>
                                            <![CDATA[
-                                        cd /app/demo-webapi/webapps;
-                                        rm -rf ROOT;
-                                        unzip -oq ${war} -d ./ROOT;
-                                        sleep 3;
-                                        rm -rf ${war}
-                                    ]]>
+                                                cd /app/demo-webapi/webapps;
+                                                rm -rf ROOT;
+                                                unzip -oq ../${war} -d ./ROOT;
+                                                sleep 3;
+                                                rm -rf ${war}
+                                           ]]>
                                        </command>
                                        <command>
                                            <![CDATA[
-                                        cd /app/demo-webapi/bin;
-                                        sh start-webapi.sh
-                                    ]]>
+                                                cd /app/demo-webapi/bin;
+                                                sh start-webapi.sh
+                                            ]]>
                                        </command>
                                    </commands>
                                    <displayCommandOutputs>true</displayCommandOutputs>
