--- a/pom.xml
+++ b/pom.xml
@@ -215,11 +215,11 @@
             </resource>
         </resources>
         <!--<extensions>-->
-            <!--<extension>-->
-                <!--<groupId>org.apache.maven.wagon</groupId>-->
-                <!--<artifactId>wagon-ssh</artifactId>-->
-                <!--<version>3.0.0</version>-->
-            <!--</extension>-->
+        <!--<extension>-->
+        <!--<groupId>org.apache.maven.wagon</groupId>-->
+        <!--<artifactId>wagon-ssh</artifactId>-->
+        <!--<version>3.0.0</version>-->
+        <!--</extension>-->
         <!--</extensions>-->
         <plugins>
             <plugin>
@@ -272,7 +272,7 @@
                         <version>2.0.0</version>
                         <executions>
                             <execution>
-                                <id>upload-sshexec</id>
+                                <id>deploy</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>upload-single</goal>
@@ -283,21 +283,7 @@
                                     <fromFile>target/${war}</fromFile>
                                     <url>scp://47.93.194.39/app/demo-webapi</url>
                                     <commands>
-                                        <command>
-                                            <![CDATA[
-                                                cd /app/demo-webapi/webapps;
-                                                rm -rf ROOT;
-                                                unzip -oq ../${war} -d ./ROOT;
-                                                sleep 3;
-                                                rm -rf ${war}
-                                            ]]>
-                                        </command>
-                                        <command>
-                                            <![CDATA[
-                                                cd /app/demo-webapi/bin;
-                                                sh start-webapi.sh
-                                            ]]>
-                                        </command>
+                                        <command><![CDATA[cd /app/demo-webapi/bin; sh deploy-webapi.sh]]></command>
                                     </commands>
                                     <displayCommandOutputs>true</displayCommandOutputs>
                                 </configuration>
