--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,7 @@
         <!--</extension>-->
         <!--</extensions>-->
         <plugins>
+            <!-- 编译 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -231,11 +232,13 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <!-- War包 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
             </plugin>
+            <!-- 测试 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
