--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <artifactId>commons-text</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.2</version>
+        </dependency>
+
 
         <dependency>
             <groupId>redis.clients</groupId>
