--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
-            <!--<scope>provided</scope>-->
+            <scope>provided</scope>
         </dependency>
 
         <!-- Spring -->
@@ -220,13 +220,6 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-        <!--<extensions>-->
-        <!--<extension>-->
-        <!--<groupId>org.apache.maven.wagon</groupId>-->
-        <!--<artifactId>wagon-ssh</artifactId>-->
-        <!--<version>3.0.0</version>-->
-        <!--</extension>-->
-        <!--</extensions>-->
         <plugins>
             <!-- 编译 -->
             <plugin>
